testsuite/tests/grammar/invalid_lexers/pattern_2.lkt
lexer foo_lexer {
    example <- p"{no_such_pattern}"
}

grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}
